prevent filter item selected color from shifting
hover vs non hover was obvious change in text color while default kept same color.

--- a/github-dark.css
+++ b/github-dark.css
@@ -3366,7 +3366,8 @@
   .gist-quicksearch-results .select-menu-item[aria-selected=true] span,
   .select-menu-item:hover .description, .select-menu-item:focus .description,
   .diffbar [role^=menuitem]:focus:not(.is-range-selected) .text-emphasized,
-  .diffbar [role^=menuitem]:hover:not(.is-range-selected) .text-emphasized {
+  .diffbar [role^=menuitem]:hover:not(.is-range-selected) .text-emphasized,
+  .filter-item.selected p {
     color: #f0f0f0 !important;
   }
   .btn.btn-primary, .button.primary, .minibutton.primary,
